# ChemicalCompoundGenerator

./: CMakeLists.txt
CCG/Final/src/Atom/: atom.cpp  atom.hpp
CCG/Final/src/Compound/: CMakeLists.txt  metal.cpp  metal.hpp
src/: CMakeLists.txt  main.cpp
src/Atom/: CMakeLists.txt  atom.cpp  atom.hpp
src/Compound/: CMakeLists.txt  compound_substance.cpp  compound_substance.hpp
